# sample-agentcore-deep-research

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .typos.toml  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml
.mkdocs/: Makefile  README.md  mkdocs.yml  requirements.txt
docker/: Dockerfile.frontend.dev  docker-compose.yml
docs/: .nav.yml  CORRELATE_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  GATEWAY.md  LOCAL_DEVELOPMENT.md  LOCAL_DOCKER_TESTING.md  MEMORY_INTEGRATION.md  STREAMING.md  TOOL_AC_CODE_INTERPRETER.md  VERSION_BUMP_PLAYBOOK.md  index.md
docs/architecture-diagram/: correlate-architecture.drawio
frontend/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/hooks/: UseMobile.ts  useAuth.ts  useToolRenderer.ts
frontend/src/lib/: auth.ts  utils.ts
frontend/src/routes/: ChatPage.tsx  index.tsx
frontend/src/services/: feedbackService.ts  sessionService.ts
frontend/src/styles/: globals.css
frontend/src/test/: build.test.ts  components.test.tsx  config.test.ts  env.test.ts  property-auth-routing.test.tsx  property-config-compatibility.test.ts  property-env-vars.test.ts  routing.test.ts  setup.ts
frontend/src/types/: jsx.d.ts
gateway/: __init__.py
gateway/tools/: __init__.py
gateway/tools/arxiv_search/: arxiv_search_lambda.py  tool_spec.json
gateway/tools/clinicaltrials_search/: clinicaltrials_search_lambda.py  tool_spec.json
gateway/tools/commodities_price/: commodities_price_lambda.py  tool_spec.json
gateway/tools/edgar_search/: edgar_search_lambda.py  tool_spec.json
gateway/tools/fred_search/: fred_search_lambda.py  (+1 more)
infra-cdk/: .config_example.yaml  .gitignore  README.md  cdk.json  config.yaml  jest.config.js  package-lock.json  package.json
infra-cdk/lib/: adr-main-stack.ts  amplify-hosting-stack.ts  backend-stack.ts  cognito-stack.ts  correlate-main-stack.ts  fast-main-stack.ts
infra-cdk/scripts/: post-deploy.js
infra-cdk/test/: adr-cdk.test.ts  correlate-cdk.test.ts  fast-cdk.test.ts
patterns/langgraph-single-agent/: langgraph_agent.py
patterns/strands-deep-research/: Dockerfile  __init__.py  deep_research_agent.py  pdf_generator.py  report_upload_hook.py  requirements.txt  safe_bedrock_model.py  system_prompt.txt
patterns/strands-single-agent/: basic_agent.py  strands_code_interpreter.py
patterns/utils/: __init__.py  auth.py  inference.py  ssm.py
scripts/: README.md  deploy-frontend.py  utils.py
test-scripts/: README.md  test-agent-docker.py  test-agent.py  test-arxiv-tool.py  test-deep-research-agent.py  test-feedback-api.py  test-gateway.py  test-memory.py  test_nova_local.py  test_openfda_local.py  test_tavily_local.py
tests/: __init__.py  conftest.py  pytest.ini
tests/integration/: __init__.py
tests/unit/: __init.py
tools/code_interpreter/: code_interpreter_tools.py  execute_python_tool.py
tools/data_analysis/: advisor_prompt.txt
vibe-context/: AGENTS.md  development-best-practices.md
(+63 files in other folders)
