[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correlate-deep-research"
version = "0.3.1"
description = "Correlate: Deep Research - AI-powered multi-source research application built on Amazon Bedrock AgentCore"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "AWS Professional Services", email = "aws-professional-services@amazon.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies for gateway utilities and scripts
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
# Development dependencies
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

# Strands agent dependencies (for local development)
agent-strands = [
    "strands-agents==1.16.0",
    "bedrock-agentcore[strands-agents]==1.0.6",
    "mcp==1.21.0",
]

# All dependencies for local development
all = [
    "correlate-deep-research[dev,agent-strands]",
]

[project.urls]
Homepage = "https://github.com/aws-samples/correlate-deep-research"
Documentation = "https://github.com/aws-samples/correlate-deep-research/tree/main/docs"
Repository = "https://github.com/aws-samples/correlate-deep-research"
Issues = "https://github.com/aws-samples/correlate-deep-research/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*", "scripts*"]
exclude = ["tests*", "infra-cdk*", "frontend*", "patterns*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "S607"]                                    # Allow assert, subprocess calls

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"test-scripts/*.py" = ["E402", "T201", "S110", "B904", "B007", "E501"]  # Test scripts
"infra-cdk/lambdas/zip-packager/*.py" = ["S310"]  # CFN response URL is trusted
"gateway/tools/tavily_search/*.py" = ["S310"]  # Tavily API URL is trusted
"test-scripts/test_tavily_local.py" = ["S310"]  # Tavily API URL is trusted
"patterns/*/*.py" = ["T201"]  # Allow print statements for agent logging
"scripts/*.py" = ["T201", "UP036", "E501"]  # Allow print statements in CLI scripts

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["patterns/"]  # Folders with hyphens are not valid Python package names

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
